--- a/output/cv.html
+++ b/output/cv.html
@@ -4,87 +4,107 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+    rel="stylesheet">
   <title>Serhii Mikheiev CV</title>
   <style>
     body {
-      font-family: Verdana, sans-serif;
+      font-family: "Figtree", sans-serif;
+      font-size: 10pt;
+      letter-spacing: 0.5px;
+      line-height: 1.3;
+      color: #333;
       margin: 0;
       padding: 0;
-      line-height: 1.6;
-      color: #333;
+    }
+
+    h1,
+    h2,
+    h3 {
+      color: #2c3e50;
+      margin: 0;
+    }
+
+    h1 {
+      font-size: 28pt;
+      letter-spacing: 2px;
+    }
+
+    h2 {
+      font-size: 12pt;
+    }
+
+    h3 {
+      font-size: 11pt;
+      font-style: italic;
+      font-weight: normal;
+    }
+
+    p {
+      margin: 0;
     }
 
     .container {
-      width: 80%;
       max-width: 900px;
       margin: 0 auto;
       padding: 20px;
     }
 
-    h1 {
-      margin: 0;
-      padding-bottom: 10px;
-      color: #2c3e50;
-    }
+    section {
+      border-bottom: 1px solid #333;
+      padding: 20px 0;
 
-    h2 {
-      font-weight: bold;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      margin: 0;
-      padding-bottom: 10px;
-      color: #2c3e50;
+      &:first-child {
+        padding-top: 0;
+      }
+
+      &:last-child {
+        border-bottom: 0;
+        padding-bottom: 0;
+      }
+
+      h2 {
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        padding-bottom: 8px;
+      }
     }
 
     .contact-info {
       display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
+      gap: 12px;
       align-items: center;
+
+      a {
+        text-decoration: none;
+        color: #333;
+      }
     }
 
-    .contact-info a {
-      text-decoration: none;
-      color: #3498db;
-    }
-
-    .contact-info .delimiter {
-      font-weight: bold;
-      color: #333;
-      margin: 0 5px;
-    }
-
-    .section {
-      margin: 20px 0;
-    }
-
-    .section hr {
-      border: 0;
-      border-top: 1px solid #ccc;
-      margin: 10px 0;
-    }
-
-    .experience,
-    .education {
-      margin-top: 10px;
-    }
-
-    .experience-item,
-    .education-item {
-      margin-bottom: 15px;
-    }
-
-    .positions {
+    .experiences {
       display: flex;
-      justify-content: space-between;
-    }
+      flex-direction: column;
+      gap: 16px;
 
-    .positions span {
-      width: 45%;
-    }
+      .positions {
+        margin: 2px 0;
 
-    .content {
-      margin-top: 10px;
+        .position {
+          display: flex;
+          justify-content: space-between;
+          margin-left: 8px;
+
+          .position-title {
+            font-weight: bold;
+          }
+
+          .position-years {
+            font-style: italic;
+          }
+        }
+      }
     }
   </style>
 </head>
@@ -93,67 +113,75 @@
 
   <div class="container">
     <!-- Name and Contact Info -->
-    <h1>Serhii Mikheiev</h1>
-    <div class="contact-info">
-      <span>+358 41 755 3621</span>
-      <span class="delimiter">●</span>
-      <span><a href="mailto:mikh.s.o@gmail.com">mikh.s.o@gmail.com</a></span>
-      <span class="delimiter">●</span>
-      <span><a href="https:&#x2F;&#x2F;linkedin.com&#x2F;in&#x2F;smikheiev">https:&#x2F;&#x2F;linkedin.com&#x2F;in&#x2F;smikheiev</a></span>
-    </div>
+    <section>
+      <h1>Serhii Mikheiev</h1>
+      <div class="contact-info">
+        <span>+358 41 755 3621</span>
+        <span>●</span>
+        <span><a href="mailto:mikh.s.o@gmail.com">mikh.s.o@gmail.com</a></span>
+        <span>●</span>
+        <span><a href="https:&#x2F;&#x2F;linkedin.com&#x2F;in&#x2F;smikheiev">https:&#x2F;&#x2F;linkedin.com&#x2F;in&#x2F;smikheiev</a></span>
+      </div>
+    </section>
 
     <!-- About Me -->
-    <div class="section">
+    <section>
       <h2>About Me</h2>
       <p>Experienced software engineer with a passion for building impactful applications and solving complex problems.
 Highly skilled in full-stack development and experienced with a variety of technologies. Motivated by challenges and always looking to learn and grow.</p>
-    </div>
-    <hr>
+    </section>
 
     <!-- Professional Experience -->
-    <div class="section experience">
+    <section>
       <h2>Professional Experience</h2>
-      <div class="experience-item">
-        <h3>Company A</h3>
-        <div class="positions">
-          <span><strong>Senior Software Engineer</strong></span>
-          <span><strong>2018 - Present</strong></span>
-        </div>
-        <div class="positions">
-          <span><strong>Software Engineer</strong></span>
-          <span><strong>2015 - 2018</strong></span>
-        </div>
-        <div class="content">
+      <div class="experiences">
+        <div>
+          <h3>Company A</h3>
+          <div class="positions">
+            <div class="position">
+              <span class="position-title">Senior Software Engineer</span>
+              <span class="position-years">2018 - Present</span>
+            </div>
+            <div class="position">
+              <span class="position-title">Software Engineer</span>
+              <span class="position-years">2015 - 2018</span>
+            </div>
+          </div>
           <p>Responsible for designing and implementing key features of the company’s platform, working across frontend and backend stacks. Led a team of developers and collaborated with cross-functional teams to ensure high-quality delivery.</p>
         </div>
-      </div>
-      <div class="experience-item">
-        <h3>Company B</h3>
-        <div class="positions">
-          <span><strong>Software Engineer</strong></span>
-          <span><strong>2015 - 2018</strong></span>
-        </div>
-        <div class="positions">
-          <span><strong>Junior Software Engineer</strong></span>
-          <span><strong>2013 - 2015</strong></span>
-        </div>
-        <div class="content">
+        <div>
+          <h3>Company B</h3>
+          <div class="positions">
+            <div class="position">
+              <span class="position-title">Software Engineer</span>
+              <span class="position-years">2015 - 2018</span>
+            </div>
+            <div class="position">
+              <span class="position-title">Junior Software Engineer</span>
+              <span class="position-years">2013 - 2015</span>
+            </div>
+          </div>
           <p>Developed new features and enhanced existing functionality in a fast-paced environment. Contributed to both frontend and backend development, focusing on performance optimization and scalability.</p>
         </div>
       </div>
-    </div>
-    <hr>
+    </section>
 
     <!-- Education -->
-    <div class="section education">
+    <section>
       <h2>Education</h2>
-      <div class="education-item">
-        <h3>University Name</h3>
-        <div class="years">2010 - 2014</div>
-        <p><strong>Degree:</strong> Bachelor of Science in Computer Science</p>
-        <p>Studied core principles of software development, data structures, algorithms, and systems design. Graduated with honors.</p>
+      <div class="experiences">
+        <div>
+          <h3>University Name</h3>
+          <div class="positions">
+            <div class="position">
+              <span class="position-title">Bachelor of Science in Computer Science</span>
+              <span class="position-years">2010 - 2014</span>
+            </div>
+          </div>
+          <p>Studied core principles of software development, data structures, algorithms, and systems design. Graduated with honors.</p>
+        </div>
       </div>
-    </div>
+    </section>
   </div>
 
   <script>
