--- a/src/template.html
+++ b/src/template.html
@@ -4,87 +4,107 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
+    rel="stylesheet">
   <title>{{title}}</title>
   <style>
     body {
-      font-family: Verdana, sans-serif;
+      font-family: "Figtree", sans-serif;
+      font-size: 10pt;
+      letter-spacing: 0.5px;
+      line-height: 1.3;
+      color: #333;
       margin: 0;
       padding: 0;
-      line-height: 1.6;
-      color: #333;
+    }
+
+    h1,
+    h2,
+    h3 {
+      color: #2c3e50;
+      margin: 0;
+    }
+
+    h1 {
+      font-size: 28pt;
+      letter-spacing: 2px;
+    }
+
+    h2 {
+      font-size: 12pt;
+    }
+
+    h3 {
+      font-size: 11pt;
+      font-style: italic;
+      font-weight: normal;
+    }
+
+    p {
+      margin: 0;
     }
 
     .container {
-      width: 80%;
       max-width: 900px;
       margin: 0 auto;
       padding: 20px;
     }
 
-    h1 {
-      margin: 0;
-      padding-bottom: 10px;
-      color: #2c3e50;
-    }
+    section {
+      border-bottom: 1px solid #333;
+      padding: 20px 0;
 
-    h2 {
-      font-weight: bold;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      margin: 0;
-      padding-bottom: 10px;
-      color: #2c3e50;
+      &:first-child {
+        padding-top: 0;
+      }
+
+      &:last-child {
+        border-bottom: 0;
+        padding-bottom: 0;
+      }
+
+      h2 {
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        padding-bottom: 8px;
+      }
     }
 
     .contact-info {
       display: flex;
-      gap: 10px;
-      margin-bottom: 20px;
+      gap: 12px;
       align-items: center;
+
+      a {
+        text-decoration: none;
+        color: #333;
+      }
     }
 
-    .contact-info a {
-      text-decoration: none;
-      color: #3498db;
-    }
-
-    .contact-info .delimiter {
-      font-weight: bold;
-      color: #333;
-      margin: 0 5px;
-    }
-
-    .section {
-      margin: 20px 0;
-    }
-
-    .section hr {
-      border: 0;
-      border-top: 1px solid #ccc;
-      margin: 10px 0;
-    }
-
-    .experience,
-    .education {
-      margin-top: 10px;
-    }
-
-    .experience-item,
-    .education-item {
-      margin-bottom: 15px;
-    }
-
-    .positions {
+    .experiences {
       display: flex;
-      justify-content: space-between;
-    }
+      flex-direction: column;
+      gap: 16px;
 
-    .positions span {
-      width: 45%;
-    }
+      .positions {
+        margin: 2px 0;
 
-    .content {
-      margin-top: 10px;
+        .position {
+          display: flex;
+          justify-content: space-between;
+          margin-left: 8px;
+
+          .position-title {
+            font-weight: bold;
+          }
+
+          .position-years {
+            font-style: italic;
+          }
+        }
+      }
     }
   </style>
 </head>
@@ -93,56 +113,64 @@
 
   <div class="container">
     <!-- Name and Contact Info -->
-    <h1>{{name}}</h1>
-    <div class="contact-info">
-      <span>{{phone}}</span>
-      <span class="delimiter">●</span>
-      <span><a href="mailto:{{email}}">{{email}}</a></span>
-      <span class="delimiter">●</span>
-      <span><a href="{{linkedin}}">{{linkedin}}</a></span>
-    </div>
+    <section>
+      <h1>{{name}}</h1>
+      <div class="contact-info">
+        <span>{{phone}}</span>
+        <span>●</span>
+        <span><a href="mailto:{{email}}">{{email}}</a></span>
+        <span>●</span>
+        <span><a href="{{linkedin}}">{{linkedin}}</a></span>
+      </div>
+    </section>
 
     <!-- About Me -->
-    <div class="section">
+    <section>
       <h2>About Me</h2>
       <p>{{about}}</p>
-    </div>
-    <hr>
+    </section>
 
     <!-- Professional Experience -->
-    <div class="section experience">
+    <section>
       <h2>Professional Experience</h2>
-      {{#experience}}
-      <div class="experience-item">
-        <h3>{{company}}</h3>
-        {{#positions}}
-        <div class="positions">
-          <span><strong>{{title}}</strong></span>
-          <span><strong>{{years}}</strong></span>
-        </div>
-        {{/positions}}
-        <div class="content">
+      <div class="experiences">
+        {{#experience}}
+        <div>
+          <h3>{{company}}</h3>
+          <div class="positions">
+            {{#positions}}
+            <div class="position">
+              <span class="position-title">{{title}}</span>
+              <span class="position-years">{{years}}</span>
+            </div>
+            {{/positions}}
+          </div>
           <p>{{description}}</p>
         </div>
+        {{/experience}}
       </div>
-      {{/experience}}
-    </div>
-    <hr>
+    </section>
 
     <!-- Education -->
-    <div class="section education">
+    <section>
       <h2>Education</h2>
-      {{#education}}
-      <div class="education-item">
-        <h3>{{school}}</h3>
-        {{#degrees}}
-        <div class="years">{{years}}</div>
-        <p><strong>Degree:</strong> {{title}}</p>
-        {{/degrees}}
-        <p>{{description}}</p>
+      <div class="experiences">
+        {{#education}}
+        <div>
+          <h3>{{school}}</h3>
+          <div class="positions">
+            {{#degrees}}
+            <div class="position">
+              <span class="position-title">{{title}}</span>
+              <span class="position-years">{{years}}</span>
+            </div>
+            {{/degrees}}
+          </div>
+          <p>{{description}}</p>
+        </div>
+        {{/education}}
       </div>
-      {{/education}}
-    </div>
+    </section>
   </div>
 
   <script>
