--- a/output/cv.html
+++ b/output/cv.html
@@ -105,7 +105,8 @@
     <!-- About Me -->
     <div class="section">
       <h2>About Me</h2>
-      <p>Experienced software engineer with a passion for building impactful applications and solving complex problems. Highly skilled in full-stack development and experienced with a variety of technologies. Motivated by challenges and always looking to learn and grow.</p>
+      <p>Experienced software engineer with a passion for building impactful applications and solving complex problems.
+Highly skilled in full-stack development and experienced with a variety of technologies. Motivated by challenges and always looking to learn and grow.</p>
     </div>
     <hr>
 
@@ -154,6 +155,12 @@
       </div>
     </div>
   </div>
+
+  <script>
+    document.querySelectorAll('p').forEach(el => {
+      el.innerHTML = el.textContent.replace(/\n/g, '<br>');
+    });
+  </script>
 
 </body>
 
