--- a/output/cv.html
+++ b/output/cv.html
@@ -127,8 +127,8 @@
     <!-- About Me -->
     <section>
       <h2>About Me</h2>
-      <p>Experienced software engineer with a passion for building impactful applications and solving complex problems.
-Highly skilled in full-stack development and experienced with a variety of technologies. Motivated by challenges and always looking to learn and grow.</p>
+      <p>I’m a product-minded software engineer with over 10 years of experience across multiple industries and technology stacks. I focus on understanding user problems and pain points and solving them with code. I collaborate closely with product managers, designers, and other stakeholders to ensure technical solutions align with business goals and deliver a great user experience.
+I have experience working across all parts of the product - from frontend and backend to infrastructure. I also enjoy improving the developer experience to make developers&#39; lives easier and more efficient. And to some extent, I like working on team processes to improve productivity and collaboration.</p>
     </section>
 
     <!-- Professional Experience -->
@@ -136,32 +136,81 @@ Highly skilled in full-stack development and experienced with a variety of techn
       <h2>Professional Experience</h2>
       <div class="experiences">
         <div>
-          <h3>Company A</h3>
+          <h3>Meru Health</h3>
+          <div class="positions">
+            <div class="position">
+              <span class="position-title">Software Engineer Lead (Tech Lead)</span>
+              <span class="position-years">Aug 2023 - Present</span>
+            </div>
+            <div class="position">
+              <span class="position-title">Senior Software Engineer</span>
+              <span class="position-years">Aug 2022 - Jul 2023</span>
+            </div>
+            <div class="position">
+              <span class="position-title">Software Engineer</span>
+              <span class="position-years">Jul 2020 - Jul 2022</span>
+            </div>
+          </div>
+          <p>This role marked a significant shift, both in terms of industry – moving away from gamedev – and the technologies I worked with. I quickly learned and adapted to new tools such as React, React Native, GraphQL, PostgreSQL, and later Google Cloud Platform and Terraform. I was able to contribute to the codebase from the start and quickly became an integral part of the team. I worked on the mobile application for users, the internal web dashboard for therapists, backend services, and cloud infrastructure.
+As a tech lead, I was responsible for technical decisions, ensuring that code quality and architecture met company standards, guiding the team on best practices, mentoring and onboarding team members. I was also the go-to person for any technical challenges or questions from other teams. Additionally, I was accountable for the reliability and stability of the services, ensuring they ran smoothly and efficiently with minimal downtime. As part of the product trio (Product Manager, Lead Designer, and Tech Lead), we worked together to shape the product’s future, review user research and product analytics, adjust the roadmap, and prioritize features to ensure the product met both user needs and business objectives.
+Technologies used: React, React Native, GraphQL, PostgreSQL, Google Cloud Platform, Terraform.</p>
+        </div>
+        <div>
+          <h3>Yggdrasil Gaming</h3>
+          <div class="positions">
+            <div class="position">
+              <span class="position-title">Tech Lead Client Developer</span>
+              <span class="position-years">Aug 2018 - Jun 2020</span>
+            </div>
+            <div class="position">
+              <span class="position-title">Senior Client Developer</span>
+              <span class="position-years">May 2018 - Jul 2018</span>
+            </div>
+          </div>
+          <p>I worked on web clients for online slot games, supporting both desktop and mobile browsers. I quickly learned new technologies - JavaScript and pixi.js (a library for WebGL rendering), and applied my prior experience with the Robotlegs framework, Spine, and TweenMax.
+As a tech lead, I was responsible for maintaining code quality, improving architecture, onboarding and mentoring new developers, prioritizing tasks based on business objectives. I also helped with managing project timelines and allocating resources. I worked closely with game producers, managers, and other teams (backend, platform) to ensure timely game releases.
+Additionally, I contributed to improving the company’s internal framework, introducing new features and supporting its transition from a monolithic structure to smaller, independent modules.
+Technologies used: JavaScript, pixi.js, Spine, TweenMax.</p>
+        </div>
+        <div>
+          <h3>Rage Quit Games</h3>
+          <div class="positions">
+            <div class="position">
+              <span class="position-title">Full-Stack Game Developer</span>
+              <span class="position-years">Jan 2018 - Sep 2018</span>
+            </div>
+          </div>
+          <p>I worked on developing a mobile multiplayer online RPG game using Unity3D. In addition to building the game client, I also worked on backend services with Node.js for features like friends, chat, and push notifications. This role was my first experience with Node.js, JavaScript, cloud infrastructure, and Docker containers. It strengthened my Unity3D skills and provided a solid foundation for backend development.
+Technologies used: Unity3D, Node.js, JavaScript, Docker, Google Cloud Platform (GCP).</p>
+        </div>
+        <div>
+          <h3>GameDesire (Ganymede)</h3>
           <div class="positions">
             <div class="position">
               <span class="position-title">Senior Software Engineer</span>
-              <span class="position-years">2018 - Present</span>
+              <span class="position-years">Jun 2017 - Sep 2017</span>
             </div>
             <div class="position">
               <span class="position-title">Software Engineer</span>
-              <span class="position-years">2015 - 2018</span>
+              <span class="position-years">Jun 2015 - May 2017</span>
             </div>
           </div>
-          <p>Responsible for designing and implementing key features of the company’s platform, working across frontend and backend stacks. Led a team of developers and collaborated with cross-functional teams to ensure high-quality delivery.</p>
+          <p>I worked on the web client for a real-time online multiplayer billiards game using ActionScript (Flash). I applied my knowledge of ActionScript and the Starling framework and gained new skills, particularly in implementing MVC architecture with the Robotlegs framework, using IoC, and the TweenMax library for animations. This project also introduced me to working in a larger team and following agile methodologies and good development practices (eg, code reviews, CI&#x2F;CD).
+Later, I transitioned to mobile development, working on an Android client for a real-time multiplayer poker game built with Java (native Android app). Although I was new to native Android development, I quickly got up to speed and began contributing within the first week. I then worked on porting the game to the Qt framework for both iOS and Android platforms, which required learning the Qt framework and C++. Through this, I gained experience in native Android (and a bit iOS) development, the Qt environment, and mobile development practices (eg, app release and distribution process).
+As a senior software engineer, I later led a team of 3 developers on a new project: a real-time multiplayer strategy card game for Android and iOS. We used the Qt framework for the client and C++ for the backend game logic. The game was successfully soft-launched on the Apple and Google app stores.
+Technologies used: ActionScript (Flash), Starling framework, Robotlegs framework (MVC), TweenMax, native Android, Java, Qt, C++.</p>
         </div>
         <div>
-          <h3>Company B</h3>
+          <h3>Rolling Games (Picaboum Ukraine)</h3>
           <div class="positions">
             <div class="position">
-              <span class="position-title">Software Engineer</span>
-              <span class="position-years">2015 - 2018</span>
-            </div>
-            <div class="position">
-              <span class="position-title">Junior Software Engineer</span>
-              <span class="position-years">2013 - 2015</span>
+              <span class="position-title">Game Developer</span>
+              <span class="position-years">Apr 2013 - May 2015</span>
             </div>
           </div>
-          <p>Developed new features and enhanced existing functionality in a fast-paced environment. Contributed to both frontend and backend development, focusing on performance optimization and scalability.</p>
+          <p>I was hired as a Unity3D developer, but shortly after starting, I was asked to help with a small game built with ActionScript (Flash). Following this, I took on the development of a major project as the sole developer on the team: an online match-3 game, similar to Candy Crush Saga, which was launched on the Facebook Games platform. Although I had only basic knowledge of ActionScript initially, I quickly learned key frameworks and libraries used in game development (eg, Starling, Spine). Working on this project taught me both good and bad coding practices, as well as how to handle the unique challenges of maintaining and updating a live game. It gave me a strong foundation for my future development.
+In addition to this large project, I contributed to several smaller games developed with ActionScript and Unity3D. This role also provided my first experience in a collaborative team environment, where I worked closely with PMs, designers, and other stakeholders.
+Technologies used: ActionScript (Flash), Unity3D, Starling framework (game engine), Spine (skeletal animations).</p>
         </div>
       </div>
     </section>
@@ -171,14 +220,14 @@ Highly skilled in full-stack development and experienced with a variety of techn
       <h2>Education</h2>
       <div class="experiences">
         <div>
-          <h3>University Name</h3>
+          <h3>Chernihiv National University of Technology (Ukraine)</h3>
           <div class="positions">
             <div class="position">
-              <span class="position-title">Bachelor of Science in Computer Science</span>
-              <span class="position-years">2010 - 2014</span>
+              <span class="position-title">BSc Computer Systems and Networks</span>
+              <span class="position-years">2008-2013</span>
             </div>
           </div>
-          <p>Studied core principles of software development, data structures, algorithms, and systems design. Graduated with honors.</p>
+          <p></p>
         </div>
       </div>
     </section>
