--- a/src/template.html
+++ b/src/template.html
@@ -114,20 +114,20 @@
   <div class="container">
     <!-- Name and Contact Info -->
     <section>
-      <h1>{{name}}</h1>
+      <h1>{{contactInfo.name}}</h1>
       <div class="contact-info">
-        <span>{{phone}}</span>
+        <span>{{contactInfo.phone}}</span>
         <span>●</span>
-        <span><a href="mailto:{{email}}">{{email}}</a></span>
+        <span><a href="mailto:{{contactInfo.email}}">{{contactInfo.email}}</a></span>
         <span>●</span>
-        <span><a href="{{linkedin}}">{{linkedin}}</a></span>
+        <span><a href="{{contactInfo.linkedin}}">{{contactInfo.linkedin}}</a></span>
       </div>
     </section>
 
     <!-- About Me -->
     <section>
       <h2>About Me</h2>
-      <p>{{about}}</p>
+      <p>{{aboutMe}}</p>
     </section>
 
     <!-- Professional Experience -->
