add a small spacing for used technologies

--- a/src/template.html
+++ b/src/template.html
@@ -108,6 +108,10 @@
           font-weight: bold;
         }
       }
+
+      .technologies {
+        padding-top: 4px;
+      }
     }
   </style>
 </head>
@@ -149,6 +153,7 @@
             {{/positions}}
           </div>
           <p>{{description}}</p>
+          <p class="technologies">Technologies used: {{technologies}}.</p>
         </div>
         {{/experience}}
       </div>
