--- a/output/cv.html
+++ b/output/cv.html
@@ -154,7 +154,7 @@ I have experience working across all parts of the product - from frontend and ba
           </div>
           <p>This role marked a significant shift, both in terms of industry – moving away from gamedev – and the technologies I worked with. I quickly learned and adapted to new tools such as React, React Native, GraphQL, PostgreSQL, and later Google Cloud Platform and Terraform. I was able to contribute to the codebase from the start and quickly became an integral part of the team. I worked on the mobile application for users, the internal web dashboard for therapists, backend services, and cloud infrastructure.
 As a tech lead, I was responsible for technical decisions, ensuring that code quality and architecture met company standards, guiding the team on best practices, mentoring and onboarding team members. I was also the go-to person for any technical challenges or questions from other teams. Additionally, I was accountable for the reliability and stability of the services, ensuring they ran smoothly and efficiently with minimal downtime. As part of the product trio (Product Manager, Lead Designer, and Tech Lead), we worked together to shape the product’s future, review user research and product analytics, adjust the roadmap, and prioritize features to ensure the product met both user needs and business objectives.</p>
-          <p class="technologies">Technologies used: React, React Native, GraphQL, PostgreSQL, Google Cloud Platform, Terraform.</p>
+          <p class="technologies">Technologies used: React, React Native, Node.js, TypeScript, GraphQL, PostgreSQL, Docker, Google Cloud Platform, Terraform.</p>
         </div>
         <div>
           <div class="company-and-years">
@@ -179,7 +179,7 @@ Additionally, I contributed to improving the company’s internal framework, int
             <span class="position">Full-Stack Game Developer</span>
           </div>
           <p>I worked on developing a mobile multiplayer online RPG game using Unity3D. In addition to building the game client, I also worked on backend services with Node.js for features like friends, chat, and push notifications. This role was my first experience with Node.js, JavaScript, cloud infrastructure, and Docker containers. It strengthened my Unity3D skills and provided a solid foundation for backend development.</p>
-          <p class="technologies">Technologies used: Unity3D, Node.js, JavaScript, Docker, Google Cloud Platform (GCP).</p>
+          <p class="technologies">Technologies used: Unity3D, Node.js, JavaScript, Docker, Google Cloud Platform.</p>
         </div>
         <div>
           <div class="company-and-years">
